--- a/cms/package.json
+++ b/cms/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query-devtools": "^4.36.1",
     "antd": "^4.24.14",
     "axios": "^1.5.1",
+    "classnames": "^2.3.2",
     "formik": "^2.2.9",
     "formik-antd": "^2.0.4",
     "moment": "^2.29.4",
