--- a/cms/package.json
+++ b/cms/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "pf": "prettier --write ."
+    "lf": "eslint --fix .",
+    "pf": "prettier --write .",
+    "pre-commit": "prettier --write . && eslint --fix ."
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
@@ -36,7 +38,8 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.69.0",
     "styled-components": "^6.0.8",
-    "swiper": "^10.3.1"
+    "swiper": "^10.3.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
